# kolga

./: .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md
doc/: grammar.txt  reserved_words.txt
error/: Cargo.toml  gen.rs  lex.rs  lib.rs  parse.rs  ty.rs
kolgac/: Cargo.toml  ast.rs  lexer.rs  lib.rs  parser.rs  sym.rs  symtab.rs  token.rs  ty_rec.rs  types.rs
kolgac/src/: ast.rs  lexer.rs  lib.rs  parser.rs  sym.rs  symtab.rs  token.rs  ty_rec.rs  visit.rs
kolgac/tests/: lexer_test.rs  parser_test.rs
kolgac_codegen/: Cargo.toml  lib.rs  obj.rs
kolgac_codegen/src/: classtab.rs  lib.rs  llvm.rs  obj.rs
kolgac_codegen/tests/: codegen_test.rs
kolgac_driver/: Cargo.toml
kolgac_driver/src/: kolga.rs
kolgac_errors/: Cargo.toml  gen.rs  lex.rs  parse.rs  ty.rs
kolgac_ir/: Cargo.toml
kolgac_llvm/: Cargo.toml
kolgac_types/: Cargo.toml
liberrors/: Cargo.toml  lib.rs  report.rs
libkolgac/: Cargo.toml  ast.rs  codegen.rs  lexer.rs  lib.rs  parser.rs  sym.rs  symtab.rs  token.rs  ty_rec.rs  type_record.rs
libllvm_codegen/: Cargo.toml  classtab.rs  codegen.rs  gen.rs  lib.rs  objgen.rs  valtab.rs
libsnowc/: Cargo.toml  ast.rs  codegen.rs  lexer.rs  lib.rs  op.rs  parser.rs  reg.rs  sym.rs  symtab.rs  token.rs  tyobj.rs  type_record.rs
libsyntax/: Cargo.toml  lexer.rs  lib.rs  token.rs
libtypes/: Cargo.toml  check.rs  lib.rs
libvm/: Cargo.toml  lib.rs  op.rs  reg.rs  vm.rs
src/: kolga.rs  lib.rs  opts.rs  snow.rs  snowc.rs
tests/: codegen_test.rs  lexer_test.rs  parser_test.rs  runner.rs
ty/: Cargo.toml  check.rs  infer.rs  lib.rs
(+61 files in other folders)
