[package]
name = "kolga"
version = "0.1.0"
authors = ["cjkenn <cam.j.kennedy@gmail.com>"]

[[bin]]
name = "kolga_bin"
path = "./src/kolga.rs"

[dependencies]
kolgac = { path = "libkolgac" }
vm = { path = "libvm" }
llvm_codegen = { path = "libllvm_codegen" }
errors = { path = "liberrors" }
types = { path = "libtypes" }