[package]
name = "kolgac_driver"
version = "0.1.0"
authors = ["cjkenn"]
edition = "2018"

[[bin]]
name = "kolga"
path = "./src/kolga.rs"

[dependencies]
kolgac = { path = "../kolgac" }
kolgac_llvm = { path = "../kolgac_llvm" }
kolgac_errors = { path = "../kolgac_errors" }
kolgac_types = { path = "../kolgac_types" }
clap = "3.0.0-beta.1"